--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -18,16 +18,16 @@
         </button>
         <ul class="nav-ul" id="nav-ul">
             <li class="navmenu-links">
-                <a href="#home">Home</a>
+                <a href="index.html#home">Home</a>
             </li>
             <li class="navmenu-links">
-                <a href="#about">About</a>
+                <a href="index.html#about">About</a>
             </li>
             <li class="navmenu-links">
                 <a href="https://instagram.com/slapitforretail?igshid=MzRlODBiNWFlZA==" target="_blank">Store</a>
             </li>
             <li class="navmenu-links">
-                <a href="#contact">Contact</a>
+                <a href="index.html#contact">Contact</a>
             </li>
             <li class="navmenu-links">
                 <a href="termsandconditions.html">Terms & Conditions</a>
@@ -37,27 +37,21 @@
 </header>
 
 <!--------------Home-------------->
-<section class="home-background-image" id="home">
-    <div class="center-img">
-        <article>
-            <img src="./FINAL.png" class="home-bg-img">
-        </article>
-    </div>
-</section>
-
-<!--------------About------------->
-<section class="about" id="about">
-    <div class="about-bg-box">
-        <p class="about-me">Located in the heart of South West London, SlapItForRetail is the creation of a man who had one vision. Securing creps for people for the best price in the market. Established in June 2022, the “sourcerers” as you see it today is a vision we’ve been working towards since 2018. We source our trainers from trusted marketplaces around the world. Our small team of sneaker-obsessed experts have the experience to guarantee 100% authenticity.</p>
+<section class="terms-and-conditions">
+    <div class="links">
+        <li><a>Delivery Info</a></li>
+        <li><a>Returns Policy</a></li>
+        <li><a>Sourcing Service</a></li>
+        <li><a>Authenticity Guarantee</a></li>
+        <li><a>Privacy Policy</a></li>
+        <li><a>Terms of Service</a></li>
+        <li><a>This section be found pre-written in my policy section on Instagram</a></li>
     </div>
 </section>
 
 <!-------------Contact------------>
 <section class="contact-wrapper">
     <section class="contact-form" id="contact">
-            <div class="contact-text">
-                <h2>DM us on Instagram!</h2>
-            </div>
             <div class="icons">
                 <a href="https://www.instagram.com/slapitforretail/" target="_blank" class="icon-text"><i class="fa-brands fa-instagram fa-3x" target="_blank"></i></a>
             </div>
