Add deliveryinfo and returnspolicy pages + tidy up

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <section class="home-background-image" id="home">
     <div class="center-img">
         <article>
-            <img src="./FINAL.png" class="home-bg-img">
+            <img src="./Images/Logo/FINAL.png" class="home-bg-img">
         </article>
     </div>
 </section>
