--- a/returnspolicy.html
+++ b/returnspolicy.html
@@ -39,13 +39,32 @@
 <!--------------Main-------------->
 <section class="terms-and-conditions">
     <div class="links">
-        <li><a href="deliveryinfo.html">Delivery Info</a></li>
-        <li><a href="returnspolicy.html">Returns Policy</a></li>
-        <li><a>Sourcing Service</a></li>
-        <li><a>Authenticity Guarantee</a></li>
-        <li><a>Privacy Policy</a></li>
-        <li><a>Terms of Service</a></li>
-        <li><a>This section be found pre-written in my policy section on Instagram</a></li>
+        <h2 class="delivery-title">RETURNS POLICY</h2>
+        <p>We accept returns under the following conditions:</p>
+        <br>
+            <li>If you have received the wrong order (wrong size/product)</li>
+            <li>If your item is not authentic</li>
+            <li>If your item is not in the described condition (different to photos)</li>
+        <p class="divider">---------------------------</p>
+        <p>
+        A full refund will be issued and a return label will be provided at our expense.
+        <br><br>    
+        We do not accept returns if the buyer has changed their mind so please make sure you are happy with the product before purchasing.
+        <br><br>    
+        If your package is lost in transit via the chosen courier then you will be refunded upto the amount of insurance which correlates to the postage option chosen. 
+        <br><br><br>
+        </p>   
+        <h3 class="delivery-sub-title">For example:</h3>
+        <p>
+        <br>   
+        First class (1-2 working days) £5 - insured up to £20
+        <br><br>    
+        First class signed (1-2 working days)  £6 - insured up to £50
+        <br><br>    
+        Special 24 hour delivery (Next day) (£11 - insured up to £500
+        <br><br>    
+        Special 24 hour delivery (Nexy day) £12 - insured up to £1000
+        </p>
     </div>
 </section>
 
