--- a/deliveryinfo.html
+++ b/deliveryinfo.html
@@ -39,13 +39,18 @@
 <!--------------Main-------------->
 <section class="terms-and-conditions">
     <div class="links">
-        <li><a href="deliveryinfo.html">Delivery Info</a></li>
-        <li><a href="returnspolicy.html">Returns Policy</a></li>
-        <li><a>Sourcing Service</a></li>
-        <li><a>Authenticity Guarantee</a></li>
-        <li><a>Privacy Policy</a></li>
-        <li><a>Terms of Service</a></li>
-        <li><a>This section be found pre-written in my policy section on Instagram</a></li>
+        <h2 class="delivery-title">DELIVERY INFO</h2>
+        <h3 class="delivery-sub-title">UK (Via Royal Mail)</h3>
+        <p><br>First class (1-2 working days) £5 - insured up to £20<br><br>First class signed (1-2 working days)  £6 - insured up to £50<br><br>Special 24 hour delivery (Next day) (£11 - insured up to £500<br><br>Special 24 hour delivery (Nexy day) £12 - insured up to £1000<br><br><br></p>
+
+        <h3 class="delivery-sub-title">EU countries (Via Royal Mail)</h3>
+        <p><br>£15 Tracked and signed (Insured up to £20 as that is what it is declared as)<br><br><br></p>
+        
+        <h3 class="delivery-sub-title">Israel (TNT EXPRESS)</h3>    
+        <p><br>£37 (1-3 working days) (Insured up to £20 as that is what it is declared as)<br><br><br></p>
+        
+        <h3 class="delivery-sub-title">India (DPD EXPRESS)</h3> 
+        <p><br>£30 (4-5 working days) (Insured up to £20 as that is what it is declared as)</p>
     </div>
 </section>
 
