add content to authenticityguarantee page

--- a/authenticityguarantee.html
+++ b/authenticityguarantee.html
@@ -39,12 +39,8 @@
 <!--------------Main-------------->
 <section class="terms-and-conditions">
     <div class="links">
-        <li><a href="deliveryinfo.html">Delivery Info</a></li>
-        <li><a href="returnspolicy.html">Returns Policy</a></li>
-        <li><a href="authenticityguarantee.html">Authenticity Guarantee</a></li>
-        <li><a>Privacy Policy</a></li>
-        <li><a>Terms of Service</a></li>
-        <li><a>This section be found pre-written in my policy section on Instagram</a></li>
+        <h2 class="delivery-title">AUTHENTICITY GUARANTEE</h2>
+        <p>Here at SlapItForRetail we take pride in making sure that authenticity is guaranteed. Every single product which is sold is carefully inspected and verified by using UV lights and years of experience within the sneaker industry. We do not sell any replica goods on our site.</p>
     </div>
 </section>
 
