remove unused sections

--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -43,9 +43,7 @@
         <li><a href="deliveryinfo.html">Delivery Info</a></li>
         <li><a href="returnspolicy.html">Returns Policy</a></li>
         <li><a href="authenticityguarantee.html">Authenticity Guarantee</a></li>
-        <li><a>Privacy Policy</a></li>
-        <li><a>Terms of Service</a></li>
-        <li><a>This section be found pre-written in my policy section on Instagram</a></li>
+        <li><a href="https://www.instagram.com/slapitforretail/">This section be found pre-written in my policy section on Instagram</a></li>
     </div>
 </section>
 
