--- a/index.html
+++ b/index.html
@@ -19,16 +19,16 @@
         </button>
         <ul class="nav-ul" id="nav-ul">
             <li class="navmenu-links">
-                <a href="#home">Home</a>
+                <a href="#home" onclick="removeHash()">Home</a>
             </li>
             <li class="navmenu-links">
-                <a href="#about">About</a>
+                <a href="#about" onclick="removeHash()">About</a>
             </li>
             <li class="navmenu-links">
                 <a href="https://instagram.com/slapitforretail?igshid=MzRlODBiNWFlZA==" target="_blank">Store</a>
             </li>
             <li class="navmenu-links">
-                <a href="#contact">Contact</a>
+                <a href="#contact" onclick="removeHash()">Contact</a>
             </li>
             <li class="navmenu-links">
                 <a href="termsandconditions.html">Terms & Conditions</a>
