--- a/store.html
+++ b/store.html
@@ -18,16 +18,16 @@
         </button>
         <ul class="nav-ul" id="nav-ul">
             <li class="navmenu-links">
-                <a href="index.html">Home</a>
+                <a href="index.html" onclick="removeHash()">Home</a>
             </li>
             <li class="navmenu-links">
-                <a href="index.html#about">About</a>
+                <a href="index.html#about" onclick="removeHash()">About</a>
             </li>
             <li class="navmenu-links">
-                <a href="index.html">Store</a>
+                <a href="index.html" onclick="removeHash()">Store</a>
             </li>
             <li class="navmenu-links">
-                <a href="index.html#contact">Contact</a>
+                <a href="index.html#contact" onclick="removeHash()">Contact</a>
             </li>
         </ul>
     </nav>
