--- a/termsandconditions.html
+++ b/termsandconditions.html
@@ -19,19 +19,19 @@
         </button>
         <ul class="nav-ul" id="nav-ul">
             <li class="navmenu-links">
-                <a href="index.html#home">Home</a>
+                <a href="index.html#home" onclick="removeHash()">Home</a>
             </li>
             <li class="navmenu-links">
-                <a href="index.html#about">About</a>
+                <a href="index.html#about" onclick="removeHash()">About</a>
             </li>
             <li class="navmenu-links">
                 <a href="https://instagram.com/slapitforretail?igshid=MzRlODBiNWFlZA==" target="_blank">Store</a>
             </li>
             <li class="navmenu-links">
-                <a href="index.html#contact">Contact</a>
+                <a href="index.html#contact" onclick="removeHash()">Contact</a>
             </li>
             <li class="navmenu-links">
-                <a href="termsandconditions.html">Terms & Conditions</a>
+                <a href="termsandconditions.html" onclick="removeHash()">Terms & Conditions</a>
             </li>
         </ul>
     </nav>
