add missing onclick functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 <a href="#contact" onclick="removeHash()">Contact</a>
             </li>
             <li class="navmenu-links">
-                <a href="termsandconditions.html">Terms & Conditions</a>
+                <a href="termsandconditions.html" onclick="removeHash()">Terms & Conditions</a>
             </li>
         </ul>
     </nav>
